--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h1>This is my webapp repo. </h1>
+<h1>This is my webapp repo. Edited by Ngawang. </h1>
 <a href="info.html">Click to see Info </a>
 <br>
 <a href="contact.html">Click to see Contact </a>
